--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "author": "Sil van Diepen",
   "license": "MIT",
-  "peerDependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0"
+  "dependencies": {
+    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "stylelint-order": "^2.0.0" 
   }
 }
