--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "stylelint-logical-order",
-  "version": "0.0.7",
-  "description": "Check and fix the order of your css",
-  "main": "main.js",
-  "scripts": {
-    "test": "test"
-  },
-  "keywords": [
-    "css",
-    "order",
-    "logic"
-  ],
-  "author": "Sil van Diepen",
-  "license": "MIT",
-  "dependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "stylelint-order": "^2.0.0"
-  }
+	"name": "stylelint-logical-order",
+	"version": "0.0.7",
+	"description": "Check and fix the order of your css",
+	"main": "main.js",
+	"scripts": {
+		"test": "test"
+	},
+	"keywords": [
+		"css",
+		"order",
+		"logic"
+	],
+	"author": "Sil van Diepen",
+	"license": "MIT",
+	"dependencies": {
+		"stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
+		"stylelint-order": "^2.0.0"
+	}
 }
