--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
-		"stylelint-order": "^2.0.0"
+		"stylelint-order": "^2.0.0",		
+		"stylelint-config-standard-scss": "^1.0.0",
+		"stylelint-scss": "^3.0.0"
 	}
 }
